Migrated BSP code

--- a/AGP_A4/Config/DefaultEngine.ini
+++ b/AGP_A4/Config/DefaultEngine.ini
@@ -10,10 +10,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/MainMenuMap.MainMenuMap
+EditorStartupMap=/Game/Levels/MultiplayerMap.MultiplayerMap
 GlobalDefaultGameMode=/Game/Blueprints/MultiplayerGameModeBlueprint.MultiplayerGameModeBlueprint_C
 GameInstanceClass=/Script/AdvGamesProgramming.MainGameInstance
-GameDefaultMap=/Game/Levels/MainMenuMap.MainMenuMap
+GameDefaultMap=/Game/Levels/MultiplayerMap.MultiplayerMap
 
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 CategorySlot4=Four
@@ -26,3 +26,4 @@ CategorySlot6=Six
 
 [OnlineSubsystem]
 DefaultPlatformService=NULL
+
